Trial with Middleware + Cookie Parser

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "argon2": "^0.40.1",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "exceljs": "^4.4.0",
